# opengl-compute-shader

./: README.md  opengl-compute-shader.sln
hello-gray-scott/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.h  hello-gray-scott.vcxproj.filters  main.cpp  vcpkg.json
hello-gray-scott/shader/: frag.glsl  gray-scott.cs  vert.glsl
hello-lbm/: CMakeLists.txt  hello-lbm.vcxproj  hello-lbm.vcxproj.filters  main.cpp  vcpkg.json
hello-lbm/shaders/: frag.glsl  frag_particle.glsl  lbm.cs  particles.cs  vert.glsl  vert_particle.glsl
opengl-compute-shader/: CMakeLists.txt  main.cpp  opengl-compute-shader.filters  opengl-compute-shader.vcxproj  vcpkg.json
opengl-compute-shader/shader/: gray-scott.cs  vert.glsl
